deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  labels:
    app: student-app
spec:
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: student-app
          image: sandeeplv/student-app:v16
          #imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 9
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 9
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  labels:
    app: student-app-service
spec:
  selector:
    app: student-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
