student-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  labels:
    app: student-app-service
spec:
  selector:
    app: student-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
